gen_config config change

--- a/examples/main.conf
+++ b/examples/main.conf
@@ -8,6 +8,7 @@ DIR_PREFIX="/usr/local"
 PROJ_NAME="ddmgr"
 DIR_BIN="${DIR_PREFIX}/bin"
 DIR_CONF="${DIR_PREFIX}/etc/${PROJ_NAME}"
+DIR_CONF_SUBNETS="${DIR_CONF}/subnets.d"
 FILE_EXEC="${DIR_BIN}/${PROJ_NAME}"
 
 BASE_DNS="${DIR_CONF}/base_dns.txt"
